--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.14",
+    "mongoose": "^5.9.15",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
     "pug": "^2.0.4",
     "sharp": "^0.25.3",
     "validator": "^13.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
