--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "watch:js": "parcel watch ./templates/js/index.js --out-dir ./templates/js --out-file bundle.js",
+    "build:js": "parcel build ./templates/js/index.js --out-dir ./templates/js --out-file bundle.js"
   },
   "author": "adwaith",
   "license": "ISC",
@@ -15,11 +17,18 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.14",
+    "mongoose": "^5.9.15",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
     "pug": "^2.0.4",
     "sharp": "^0.25.3",
     "validator": "^13.0.0"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4",
+    "parcel-bundler": "^1.12.4"
+  },
+  "browserslist":[
+    "last 10 Chrome versions"
+  ]
 }
