--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "adwaith",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -28,7 +29,7 @@
     "nodemon": "^2.0.4",
     "parcel-bundler": "^1.12.4"
   },
-  "browserslist":[
+  "browserslist": [
     "last 10 Chrome versions"
   ]
 }
